# fairdash-api

./: Cargo.toml  Dockerfile  backend.railway.json  railway.json
backend/: Cargo.toml  railway.json
backend/src/: main.rs
backend/src/lib/: create.rs
backend/src/routes/: users.rs
frontend/: Cargo.toml  Dockerfile  railway.json
frontend/src/: main.rs
src/: Dockerfile  database.rs  main.rs  models.rs  routes.rs
src/lib/: create.rs  get.rs  responses.rs  user.rs
src/routes/: auth.rs  fairs.rs  users.rs
