[package]
name = "fairdash-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
tower = {version = "0.4.12", features = ["full"]}
tower-http = { version = "0.4.0", features = ["full"]}
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
passablewords = "1.0.1"
validator = { version = "0.16.1", features = ["derive", "phone"] }
serde_json = "1.0.68"
bcrypt = "0.15.0"
chrono = { version = "0.4", features = ['serde'] }
futures = "0.3.28"

[dependencies.mongodb]
version = "2.6.0"
default-features = false
features = ["async-std-runtime"]